--- a/api/src/main/resources/messages.properties
+++ b/api/src/main/resources/messages.properties
@@ -1,2 +1,2 @@
 feeplaza.auth.loginErrorMessage=Invalid log-in credentials.
-feeplaza.auth.logoutMessage=You've been logged out successfully.
+feeplaza.auth.logoutMessage=You\'ve been logged out successfully.
